Initial commit: Blitz Tesla Club website with mobile optimization

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <div class="logo">
             <span>BLITZ TESLA CLUB</span>
         </div>
+        <div class="menu-toggle">
+            <i class="fas fa-bars"></i>
+        </div>
         <ul class="nav-links">
             <li><a href="#events">Events</a></li>
             <li><a href="#gallery">Gallery</a></li>
