Optimized login page layout: Centered form, improved mobile responsiveness, fixed footer positioning

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <li><a href="#gallery">Gallery</a></li>
             <li><a href="#news">News</a></li>
             <li><a href="#join">Join Us</a></li>
+            <li><a href="login.html">Login</a></li>
         </ul>
     </nav>
 
