Added home page navigation: - Added clickable logo/title that links to home page - Updated logo styling with hover effects - Added link to index.html in all pages - Improved navigation consistency

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 <body>
     <nav>
         <div class="logo">
-            <span>BLITZ TESLA CLUB</span>
+            <a href="index.html">
+                <span>BLITZ TESLA CLUB</span>
+            </a>
         </div>
         <div class="menu-toggle">
             <i class="fas fa-bars"></i>
