--- a/login.html
+++ b/login.html
@@ -14,7 +14,9 @@
 <body class="login-page">
     <nav>
         <div class="logo">
-            <span>BLITZ TESLA CLUB</span>
+            <a href="index.html">
+                <span>BLITZ TESLA CLUB</span>
+            </a>
         </div>
         <div class="menu-toggle">
             <i class="fas fa-bars"></i>
