Updated membership buttons: - Linked 'Join Now' button to login page - Linked 'Become a Member' button to login page - Improved user flow for membership registration

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <p>Experience the Future of Driving</p>
                 <div class="cta-buttons">
-                    <a href="#join" class="btn">Join Now</a>
+                    <a href="login.html" class="btn">Join Now</a>
                     <a href="#events" class="btn btn-outline">Upcoming Events</a>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                 <h2>Join Our Community</h2>
                 <p>Connect with Tesla Enthusiasts</p>
                 <div class="cta-buttons">
-                    <a href="#membership" class="btn">Become a Member</a>
+                    <a href="login.html" class="btn">Become a Member</a>
                     <a href="#benefits" class="btn btn-outline">Learn More</a>
                 </div>
             </div>
