Optimized video playback quality: - Added HD quality parameters (1080p) - Improved video player controls - Enhanced lightbox video display - Updated video iframe attributes - Added accessibility labels - Improved play button styling

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="#events">Events</a></li>
-            <li><a href="#gallery">Gallery</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
             <li><a href="#news">News</a></li>
             <li><a href="#join">Join Us</a></li>
             <li><a href="login.html">Login</a></li>
@@ -83,7 +83,7 @@
                 <h2>Club Gallery</h2>
                 <p>Our Latest Adventures</p>
                 <div class="cta-buttons">
-                    <a href="#photos" class="btn">View Gallery</a>
+                    <a href="gallery.html" class="btn">View Gallery</a>
                 </div>
             </div>
             <div class="section-background"></div>
