--- a/register.html
+++ b/register.html
@@ -14,16 +14,19 @@
 <body class="login-page">
     <nav>
         <div class="logo">
-            <span>BLITZ TESLA CLUB</span>
+            <a href="index.html">
+                <span>BLITZ TESLA CLUB</span>
+            </a>
         </div>
         <div class="menu-toggle">
             <i class="fas fa-bars"></i>
         </div>
         <ul class="nav-links">
-            <li><a href="index.html#events">Events</a></li>
-            <li><a href="index.html#gallery">Gallery</a></li>
-            <li><a href="index.html#news">News</a></li>
-            <li><a href="index.html#join">Join Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="#news">News</a></li>
+            <li><a href="#join">Join Us</a></li>
         </ul>
     </nav>
 
@@ -84,7 +87,12 @@
                 <a href="#contact">Contact</a>
                 <a href="#about">About Us</a>
             </div>
-            <p>© 2024 Blitz Tesla Club</p>
+            <div class="footer-bottom">
+                <p>© 2024 Blitz Tesla Club</p>
+                <p class="powered-by">
+                    Website powered by <a href="http://www.summitpixels.com" target="_blank">SummitPixels</a>
+                </p>
+            </div>
         </div>
     </footer>
 
