Optimize executive page for SEO and update executive titles: - Add meta tags for SEO - Add schema.org markup for better search visibility - Update semantic HTML structure - Add canonical link - Update executive titles with abbreviations - Improve heading hierarchy

--- a/executive.html
+++ b/executive.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Club Executives - Blitz Tesla Club</title>
+    <meta name="description" content="Meet the executive team of Blitz Tesla Club. Our leadership includes Chairman Evan Mao, CEO Jason Zhang, and other dedicated professionals driving innovation in the Tesla community.">
+    <meta name="keywords" content="Blitz Tesla Club, Tesla Club Executives, Evan Mao, Jason Zhang, Tesla Community Leadership">
+    <meta name="author" content="Blitz Tesla Club">
+    <meta property="og:title" content="Executive Team - Blitz Tesla Club">
+    <meta property="og:description" content="Meet the passionate leaders driving innovation and community engagement at Blitz Tesla Club.">
+    <meta property="og:image" content="https://i.postimg.cc/hG0TfXGR/logo2.png">
+    <meta property="og:url" content="https://blitztclub.com/executive.html">
+    <meta name="twitter:card" content="summary_large_image">
+    <title>Executive Team | Blitz Tesla Club Leadership | Tesla Community</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://i.postimg.cc/BvmtNLtB/logo.png">
+    <link rel="canonical" href="https://blitztclub.com/executive.html">
 </head>
 <body class="executive-page">
     <nav>
@@ -27,7 +36,7 @@
             <li><a href="events.html">Events</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="executive.html">Executives</a></li>
-            <li><a href="#news">News</a></li>
+            <li><a href="news.html">News</a></li>
             <li><a href="#join">Join Us</a></li>
             <li><a href="login.html">Login</a></li>
         </ul>
@@ -35,15 +44,37 @@
 
     <main class="executive-container">
         <header class="executive-header">
-            <h1>Club Executives</h1>
-            <p>Meet the passionate individuals driving the Blitz Tesla Club forward</p>
+            <h1>Blitz Tesla Club Executive Team</h1>
+            <p>Meet our dedicated leadership team driving innovation and community engagement in the Tesla community</p>
         </header>
 
         <div class="executive-grid">
-            <!-- President -->
+            <!-- Chairman Section -->
+            <section class="executive-member" itemscope itemtype="http://schema.org/Person">
+                <div class="member-image">
+                    <img src="path_to_president_image.jpg" alt="Evan Mao - Chairman of Blitz Tesla Club" itemprop="image">
+                    <div class="member-overlay">
+                        <div class="member-social">
+                            <a href="https://linkedin.com/" target="_blank" rel="noopener" aria-label="Evan Mao's LinkedIn Profile" itemprop="sameAs">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                            <a href="https://instagram.com/" target="_blank" rel="noopener" aria-label="Evan Mao's Instagram Profile" itemprop="sameAs">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="member-info">
+                    <h2 itemprop="name">Evan Mao</h2>
+                    <h3 itemprop="jobTitle">Chairman (Chair)</h3>
+                    <p itemprop="description">Leading the strategic vision and direction of Blitz Tesla Club. Dedicated to fostering innovation and sustainable growth in the Tesla community.</p>
+                </div>
+            </section>
+
+            <!-- Chief Executive Officer -->
             <div class="executive-member">
                 <div class="member-image">
-                    <img src="path_to_president_image.jpg" alt="John Smith - President">
+                    <img src="path_to_vp_image.jpg" alt="Jason Zhang - Chief Executive Officer">
                     <div class="member-overlay">
                         <div class="member-social">
                             <a href="https://linkedin.com/" target="_blank" aria-label="LinkedIn Profile">
@@ -56,16 +87,16 @@
                     </div>
                 </div>
                 <div class="member-info">
-                    <h3>John Smith</h3>
-                    <h4>President</h4>
-                    <p>Tesla enthusiast and community leader with over 5 years of experience in EV advocacy. Focused on growing the Tesla community and promoting sustainable transportation.</p>
+                    <h3>Jason Zhang</h3>
+                    <h4>Chief Executive Officer (CEO)</h4>
+                    <p>Overseeing daily operations and executing the club's vision. Driving growth and excellence while ensuring exceptional member experiences across all initiatives.</p>
                 </div>
             </div>
 
-            <!-- Vice President -->
+            <!-- Chief Operation Officer -->
             <div class="executive-member">
                 <div class="member-image">
-                    <img src="path_to_vp_image.jpg" alt="Sarah Johnson - Vice President">
+                    <img src="path_to_events_director_image.jpg" alt="Klyde - Chief Operation Officer">
                     <div class="member-overlay">
                         <div class="member-social">
                             <a href="https://linkedin.com/" target="_blank" aria-label="LinkedIn Profile">
@@ -78,16 +109,16 @@
                     </div>
                 </div>
                 <div class="member-info">
-                    <h3>Sarah Johnson</h3>
-                    <h4>Vice President</h4>
-                    <p>Event planning specialist with expertise in community engagement. Dedicated to creating memorable experiences and fostering connections within our Tesla community.</p>
+                    <h3>Klyde</h3>
+                    <h4>Chief Operation Officer (COO)</h4>
+                    <p>Overseeing club operations and strategic initiatives. Ensuring seamless execution of events and programs while maintaining high standards of member experience.</p>
                 </div>
             </div>
 
-            <!-- Events Director -->
+            <!-- Chief Financial Officer -->
             <div class="executive-member">
                 <div class="member-image">
-                    <img src="path_to_events_director_image.jpg" alt="Michael Chen - Events Director">
+                    <img src="path_to_finance_director_image.jpg" alt="Lin Chen - Chief Financial Officer">
                     <div class="member-overlay">
                         <div class="member-social">
                             <a href="https://linkedin.com/" target="_blank" aria-label="LinkedIn Profile">
@@ -100,13 +131,55 @@
                     </div>
                 </div>
                 <div class="member-info">
-                    <h3>Michael Chen</h3>
-                    <h4>Events Director</h4>
-                    <p>Creative mind behind our signature events. Passionate about bringing Tesla owners together and creating unique automotive experiences.</p>
+                    <h3>Lin Chen</h3>
+                    <h4>Chief Financial Officer (CFO)</h4>
+                    <p>Managing club finances and ensuring fiscal responsibility. Focused on maintaining transparency and efficient resource allocation.</p>
                 </div>
             </div>
 
-            <!-- Add more executive members as needed -->
+            <!-- Chief Technology Officer -->
+            <div class="executive-member">
+                <div class="member-image">
+                    <img src="path_to_cto_image.jpg" alt="Yafan Zhang - Chief Technology Officer">
+                    <div class="member-overlay">
+                        <div class="member-social">
+                            <a href="https://linkedin.com/" target="_blank" aria-label="LinkedIn Profile">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                            <a href="https://instagram.com/" target="_blank" aria-label="Instagram Profile">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="member-info">
+                    <h3>Yafan Zhang</h3>
+                    <h4>Chief Technology Officer (CTO)</h4>
+                    <p>Leading technological initiatives and digital transformation. Ensuring seamless integration of technology in club operations and member experiences.</p>
+                </div>
+            </div>
+
+            <!-- Chief Information Officer -->
+            <div class="executive-member">
+                <div class="member-image">
+                    <img src="path_to_tech_director_image.jpg" alt="Kevin Lin - Chief Information Officer">
+                    <div class="member-overlay">
+                        <div class="member-social">
+                            <a href="https://linkedin.com/" target="_blank" aria-label="LinkedIn Profile">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                            <a href="https://instagram.com/" target="_blank" aria-label="Instagram Profile">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="member-info">
+                    <h3>Kevin Lin</h3>
+                    <h4>Chief Information Officer (CIO)</h4>
+                    <p>Managing information technology strategy and digital infrastructure. Ensuring data security and implementing efficient systems to support club operations.</p>
+                </div>
+            </div>
         </div>
     </main>
 
@@ -135,8 +208,8 @@
             <div class="footer-section">
                 <h3>Legal</h3>
                 <div class="footer-links">
-                    <a href="#privacy">Privacy Policy</a>
-                    <a href="#terms">Terms of Service</a>
+                    <a href="privacy.html">Privacy Policy</a>
+                    <a href="terms.html">Terms of Service</a>
                     <a href="about.html">About Us</a>
                 </div>
             </div>
