--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li><a href="events.html">Events</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="executive.html">Executives</a></li>
-            <li><a href="#news">News</a></li>
+            <li><a href="news.html">News</a></li>
             <li><a href="#join">Join Us</a></li>
             <li><a href="login.html">Login</a></li>
         </ul>
@@ -54,7 +54,7 @@
                 <div class="hero-logo">
                     <img src="https://i.postimg.cc/hG0TfXGR/logo2.png" alt="Blitz Tesla Club Logo">
                 </div>
-                <p>Experience the Future of Driving</p>
+                <p class="hero-tagline">Experience the Future of Driving</p>
                 <div class="cta-buttons">
                     <a href="login.html" class="btn">Join Now</a>
                     <a href="events.html" class="btn btn-outline">Upcoming Events</a>
@@ -91,8 +91,8 @@
             <div class="footer-section">
                 <h3>Legal</h3>
                 <div class="footer-links">
-                    <a href="#privacy">Privacy Policy</a>
-                    <a href="#terms">Terms of Service</a>
+                    <a href="privacy.html">Privacy Policy</a>
+                    <a href="terms.html">Terms of Service</a>
                     <a href="about.html">About Us</a>
                 </div>
             </div>
