--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section class="hero" id="home">
             <div class="section-content">
                 <div class="hero-logo">
-                    <img src="https://i.postimg.cc/hG0TfXGR/logo2.png" alt="Blitz Tesla Club Logo">
+                    <img src="https://i.postimg.cc/852KY6h6/logo.png" alt="Blitz Tesla Club Logo">
                 </div>
                 <p class="hero-tagline">Experience the Future of Driving</p>
                 <div class="cta-buttons">
