--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <style>
         /* Hero backgrounds */
         .hero {
-            background-image: url('https://i.ibb.co/mJD2xz1/hero-image-2.jpg') !important;
+            background-image: url('https://i.ibb.co/S6n9HKj/Group-76.jpg') !important;
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
