--- a/index.html
+++ b/index.html
@@ -103,6 +103,96 @@
             .hero-logo img {
                 max-width: min(40%, 180px);
             }
+
+            /* Mobile video optimization */
+            .gallery-item iframe {
+                width: 100%;
+                height: 100%;
+                aspect-ratio: 16/9;
+                border: none;
+                position: relative;
+                z-index: 2;
+            }
+
+            .gallery-item {
+                position: relative;
+                width: 100%;
+                height: auto;
+                overflow: hidden;
+            }
+
+            .gallery-item-overlay {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                padding: 15px;
+                background: linear-gradient(transparent, rgba(0,0,0,0.8));
+                color: white;
+                z-index: 3;
+            }
+
+            .play-btn {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                background: rgba(0,0,0,0.6);
+                border: none;
+                color: white;
+                font-size: 2rem;
+                padding: 15px;
+                border-radius: 50%;
+                cursor: pointer;
+                z-index: 4;
+                width: 60px;
+                height: 60px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                transition: all 0.3s ease;
+            }
+
+            .play-btn:hover {
+                background: rgba(0,0,0,0.8);
+                transform: translate(-50%, -50%) scale(1.1);
+            }
+
+            /* Video lightbox for mobile */
+            .video-lightbox {
+                position: fixed;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                background: rgba(0,0,0,0.9);
+                display: none;
+                justify-content: center;
+                align-items: center;
+                z-index: 1000;
+            }
+
+            .video-lightbox.active {
+                display: flex;
+            }
+
+            .video-container {
+                width: 90%;
+                max-width: 100%;
+                position: relative;
+            }
+
+            .close-video {
+                position: absolute;
+                top: -40px;
+                right: 0;
+                color: white;
+                background: none;
+                border: none;
+                font-size: 24px;
+                cursor: pointer;
+                padding: 10px;
+            }
         }
         
         #events .section-background {
