--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@
     <nav>
         <div class="logo">
             <a href="index.html">
-                <img src="https://i.postimg.cc/hG0TfXGR/logo2.png" alt="Blitz Tesla Club Logo">
+                <img src="https://i.ibb.co/fkrdXZK/Logo4-white.png" alt="Blitz Tesla Club Logo">
                 <span>BLITZ TESLA CLUB</span>
             </a>
         </div>
