--- a/verification-success.html
+++ b/verification-success.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email Verified - Blitz Tesla Club</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -11,23 +11,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://i.postimg.cc/BvmtNLtB/logo.png">
 </head>
-<body class="verification-success-page">
-    <div class="verification-success-container">
-        <img src="https://i.postimg.cc/BvmtNLtB/logo.png" alt="Blitz Tesla Club Logo" class="success-logo">
-        <div class="success-content">
+<body class="verification-page">
+    <div class="verification-container">
+        <img src="https://i.postimg.cc/BvmtNLtB/logo.png" alt="Blitz Tesla Club Logo" class="verification-logo">
+        <div class="verification-content success">
             <i class="fas fa-check-circle"></i>
             <h1>Email Verified Successfully!</h1>
-            <p>Your email has been verified and your account is now active.</p>
-            <div class="success-actions">
-                <a href="/login.html" class="btn primary-btn">
-                    <i class="fas fa-sign-in-alt"></i>
-                    Login to Your Account
-                </a>
-                <a href="/index.html" class="btn secondary-btn">
-                    <i class="fas fa-home"></i>
-                    Return to Homepage
-                </a>
-            </div>
+            <p>Your email has been verified and your membership is now active.</p>
+            <a href="login.html" class="btn primary-btn">
+                <i class="fas fa-sign-in-alt"></i>
+                Login to Your Account
+            </a>
         </div>
     </div>
 </body>
