--- a/executive.html
+++ b/executive.html
@@ -19,6 +19,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://i.postimg.cc/BvmtNLtB/logo.png">
     <link rel="canonical" href="https://blitztclub.com/executive.html">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="nav.js"></script>
 </head>
 <body class="executive-page">
     <nav>
