--- a/dashboard.html
+++ b/dashboard.html
@@ -387,7 +387,7 @@
                 const resendBtn = document.getElementById('resendVerification');
                 resendBtn.addEventListener('click', async () => {
                     try {
-                        const response = await fetch('http://localhost:3000/api/resend-verification', {
+                        const response = await fetch('https://blitz-tesla-club.vercel.app/api/resend-verification', {
                             method: 'POST',
                             headers: {
                                 'Content-Type': 'application/json',
