--- a/dashboard.html
+++ b/dashboard.html
@@ -391,6 +391,7 @@
                             method: 'POST',
                             headers: {
                                 'Content-Type': 'application/json',
+                                'Origin': 'https://www.blitztclub.com'
                             },
                             body: JSON.stringify({
                                 userId: profile.id,
