--- a/verification-failed.html
+++ b/verification-failed.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Verification Failed - Blitz Tesla Club</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- ... other head elements ... -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="https://i.postimg.cc/BvmtNLtB/logo.png">
 </head>
 <body class="verification-page">
     <div class="verification-container">
@@ -14,9 +16,9 @@
             <i class="fas fa-exclamation-circle"></i>
             <h1>Verification Failed</h1>
             <p>The verification link is invalid or has expired.</p>
-            <a href="register.html" class="btn primary-btn">
+            <a href="dashboard.html" class="btn primary-btn">
                 <i class="fas fa-redo"></i>
-                Try Again
+                Return to Dashboard
             </a>
         </div>
     </div>
