--- a/verification-success.html
+++ b/verification-success.html
@@ -16,9 +16,9 @@
             <i class="fas fa-check-circle"></i>
             <h1>Email Verified Successfully!</h1>
             <p>Your email has been verified and your membership is now active.</p>
-            <a href="login.html" class="btn primary-btn">
-                <i class="fas fa-sign-in-alt"></i>
-                Login to Your Account
+            <a href="dashboard.html" class="btn primary-btn">
+                <i class="fas fa-home"></i>
+                Go to Dashboard
             </a>
         </div>
     </div>
