--- a/dashboard.html
+++ b/dashboard.html
@@ -453,43 +453,14 @@
                         <i class="fas fa-envelope"></i>
                         Please verify your email
                         <form action="https://formsubmit.co/${profile.email}" method="POST" style="display: inline;">
-                            <input type="hidden" name="_to" value="${profile.email}">
                             <input type="hidden" name="_captcha" value="false">
                             <input type="hidden" name="_template" value="box">
-                            <input type="hidden" name="_cc" value="info@blitztclub.com">
-                            <input type="hidden" name="_subject" value="Verify Your Blitz Tesla Club Membership">
                             <input type="hidden" name="_next" value="https://www.blitztclub.com/verification-sent.html">
-                            <input type="hidden" name="_replyto" value="${profile.email}">
-                            <input type="hidden" name="_from" value="Blitz Tesla Club <info@blitztclub.com>">
-                            <input type="hidden" name="_autoresponse" value="Thank you for verifying your email. Your Blitz Tesla Club membership will be activated shortly.">
-                            <input type="hidden" name="message" value="
-                                <div style='font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto;'>
-                                    <img src='https://i.postimg.cc/BvmtNLtB/logo.png' alt='Blitz Tesla Club Logo' style='width: 150px; margin: 20px auto; display: block;'>
-                                    <h1 style='color: #171a20; text-align: center;'>Welcome to Blitz Tesla Club!</h1>
-                                    <p style='text-align: center; color: #666;'>Please verify your email to activate your membership.</p>
-                                    <div style='text-align: center; margin: 30px 0;'>
-                                        <p style='margin-bottom: 20px;'>Your Member ID: <strong>${profile.member_id}</strong></p>
-                                        <a href='https://www.blitztclub.com/verify-email?token=${verificationToken}' 
-                                           style='background: #171a20; color: white; padding: 12px 30px; text-decoration: none; border-radius: 5px; display: inline-block;'>
-                                            Click Here to Verify Your Email
-                                        </a>
-                                    </div>
-                                    <div style='margin: 30px 0; padding: 20px; background: #f8f9fa; border-radius: 10px;'>
-                                        <p style='color: #171a20; margin-bottom: 10px;'><strong>Next Steps:</strong></p>
-                                        <ol style='color: #666; text-align: left; margin-left: 20px;'>
-                                            <li>Click the verification button above</li>
-                                            <li>Your membership will be activated instantly</li>
-                                            <li>Access your digital membership card</li>
-                                            <li>Start enjoying member benefits</li>
-                                        </ol>
-                                    </div>
-                                    <p style='color: #666; font-size: 14px; text-align: center;'>
-                                        If you didn't request this email, please ignore it.
-                                    </p>
-                                </div>
-                            ">
+                            <input type="hidden" name="email" value="${profile.email}">
+                            <input type="hidden" name="token" value="${verificationToken}">
+                            <input type="hidden" name="memberId" value="${profile.member_id}">
                             <button type="submit" class="resend-btn">
-                                <i class="fas fa-redo"></i> Resend
+                                <i class="fas fa-redo"></i> Resend Verification
                             </button>
                         </form>
                     </span>
